welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if estFaceMur()
   ^Program:6: error: ';' expected but 'else' found.
else
^